@@ -7,32 +7,33 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class JwtTokenService {
 
-    private final String secret;
+	private final String secret;
 
-    @Autowired
-    public JwtTokenService(@Value("${jwt.secret}") String secret) {
-        this.secret = secret;
-    }
+	@Autowired
+	public JwtTokenService(@Value("${jwt.secret}") String secret) {
+		this.secret = secret;
+	}
 
-    public String getEmail(String token) {
-        return getAllClaimsFromToken(token).getSubject();
-    }
+	public String getEmail(String token) {
+		return getAllClaimsFromToken(token).getSubject();
+	}
 
-    public List<Role> getRoles(String token) {
-        List<String> roleStrings = getAllClaimsFromToken(token).get("roles", List.class);
-        return roleStrings.stream().map(Role::valueOf).collect(Collectors.toList());
-    }
+	public List<Role> getRoles(String token) {
+		@SuppressWarnings("unchecked")
+		List<String> roleStrings = (List<String>) getAllClaimsFromToken(token).get("roles");
+		return roleStrings != null ? roleStrings.stream().map(Role::valueOf).toList() : Collections.emptyList();
+	}
 
-    private Claims getAllClaimsFromToken(String token) {
-        return Jwts.parser()
-                .setSigningKey(secret)
-                .parseClaimsJws(token)
-                .getBody();
-    }
+	private Claims getAllClaimsFromToken(String token) {
+		return Jwts.parser()
+				.setSigningKey(secret)
+				.parseClaimsJws(token)
+				.getBody();
+	}
 }
